@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, macos-14, windows-2022, ubuntu-22.04]
+        os: [macos-13, macos-14, windows-2022, ubuntu-22.04]
     steps:
       # Setup environment
       - uses: actions/checkout@v4
@@ -71,7 +71,7 @@ jobs:
           echo "QT_QPA_PLATFORM=xcb" >> $GITHUB_ENV
 
       - name: Prepare macOS
-        if: matrix.os  == 'macos-12' || matrix.os == 'macos-14'
+        if: matrix.os  == 'macos-13' || matrix.os == 'macos-14'
         run: |
           brew install pkg-config tesseract tesseract-lang dylibbundler
           brew info tesseract
@@ -118,7 +118,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, macos-14, windows-2022, ubuntu-22.04]
+        os: [macos-13, macos-14, windows-2022, ubuntu-22.04]
     steps:
       - uses: actions/checkout@v4
 
@@ -134,7 +134,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, macos-14, windows-2022, ubuntu-22.04]
+        os: [macos-13, macos-14, windows-2022, ubuntu-22.04]
     steps:
       - uses: actions/checkout@v4
 
@@ -234,7 +234,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, macos-14, windows-2022, ubuntu-22.04]
+        os: [macos-13, macos-14, windows-2022, ubuntu-22.04]
     steps:
       - uses: actions/checkout@v4
 
@@ -258,7 +258,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: FTP upload windows package
         if: matrix.os  == 'windows-2022' && github.repository == 'dynobo/normcap'
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.WEBGO_FTP_HOST }}
           username: ${{ secrets.WEBGO_FTP_USER }}
@@ -297,10 +297,11 @@ jobs:
           verbose: true
           print-hash: true
       - name: Sign published artifacts
-        uses: sigstore/gh-action-sigstore-python@v2.1.1
+        uses: sigstore/gh-action-sigstore-python@v3.0.0
         with:
-          inputs: ./dist/*.tar.gz ./dist/*.whl
-          release-signing-artifacts: true
+          inputs: |
+            ./dist/*.tar.gz
+            ./dist/*.whl
 
   release-documentation:
     name: Deploy github pages
@@ -320,7 +321,7 @@ jobs:
       - name: Build documentation
         run: uv run poe docs-build
       - name: Deploy pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./site
